--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 section {
     min-height: 50vh;
-    padding: 9rem 9% 2rem;
+    padding: 7rem 9% 2rem;
 }
 
 #header {
@@ -115,6 +115,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    z-index: 5;
 }
 
 nav ul {
@@ -188,14 +189,14 @@ nav ul li a:hover::after {
     margin-top: 20px;
 }
 nav a.active{
-    color: #b1b273;
+    color: #676742;
     background-image: linear-gradient(#F1F1C0, #b1b273);
 }
 
 /* ------------About Me----------- */
 .about {
     width: 100%;
-    height: 800px;
+    height: 805px;
     padding: 70px 0px;
     margin-bottom: 0%;
     background-color: #b1b273;
@@ -316,9 +317,7 @@ nav a.active{
 
 /* -----------Aside Menu----------- */
 .aside-menu {
-    max-height: 100px;
     background-color: #b1b273;
-    padding: 5rem 9% 2rem;
     font-size: 18px;
 }
 
@@ -328,8 +327,7 @@ nav a.active{
     align-items: center;
     padding: 5px;
     width: 100%;
-    height: 150px;
-    background-color: #b1b273;
+    height: 20px;
     text-align: center;
 
 }
@@ -392,7 +390,9 @@ nav a.active{
 }
 
 /* ------------Blog------------- */
-
+.blog-background{
+    background-color: #f2f2d7;
+}
 .blog-container {
     display: flex;
     flex-wrap: wrap;
@@ -418,6 +418,14 @@ img {
     max-width: 100%;
     display: block;
     object-fit: cover;
+}
+
+.blog-img-2{
+    max-width: 6%;
+    transform: rotate(180deg);
+    margin-left: 75%;
+    color: #262626;
+    margin-top: -2%;
 }
 
 .card {
@@ -496,7 +504,9 @@ img {
 }
 
 /* ---------------Study Choice----------- */
-
+.study-background{
+    background-color: #F1F1C0;
+}
 .studychoice h1{
     background: #F1F1C0;
     float: left; 
@@ -524,6 +534,7 @@ img {
     font-size: 35px;
     margin-bottom: 1%;
     margin-top: 2%;
+    
 }
 .fixed-text{
     margin-top: 15%;
@@ -537,53 +548,114 @@ img {
 }
 
 /* ------------SWOT-Analysis------------ */
+.swot-background{
+    /* background-image: linear-gradient(to bottom, rgb(177, 178, 115), rgb(241, 241, 192), rgb(250, 250, 250)); */
+    background-color: #f3f3d7;
+}
+
 .swotanalysis{
     display: flex;
-    font-size: 20px;
+    font-size: 25px;
     padding: 3rem 9% 2rem;
     text-align: center;
     
+    margin-left: -13%;
 }
 .swot-h1{
     text-align: center;
-    color: #000;
-    margin-top: 10%;
-    font-size: 25px;
+    color: #000000;
+    margin-top: -10%;
+    font-size: 45px;
     text-shadow: 5px 5px 5px #999a64;
 }
 .swot-img{
-    margin-left: 35%;
+    margin-left: 25%;
     margin-top: 5%;
-    max-height: 90%px;
-    max-width: 30%;
-    border-radius: 70%;
+    max-width: 50%;
+    border-radius: 10%;
+    /* border-style: solid; */
+    overflow: hidden;
 }
 .strengths{
     float: left;
-    box-shadow: 2px 2px 10px 10px #F1F1C0;
-    max-width: 55%;
+    /* box-shadow: 2px 2px 10px 10px #b1b273; */
+    max-width: 50%;
 }
 .weaknesses{
     float: right;
-    box-shadow: 2px 2px 10px 10px #F1F1C0;
-    margin-left: 5%;
+    /* box-shadow: 2px 2px 10px 10px #b1b273; */
+    margin-left: 17%;
 }
 .opportunities{
     float: left;
-    box-shadow: 2px 2px 10px 10px #F1F1C0;
-    margin-left: 5%;
+    /* box-shadow: 2px 2px 10px 10px #b1b273; */
+    margin-left: 10%;
 }
-.threads{
+.threats{
     float: right;
-    box-shadow: 2px 2px 10px 10px #F1F1C0;
+    /* box-shadow: 2px 2px 10px 10px #b1b273; */
 }
 .swotanalysis-2{
     display: flex;
-    font-size: 20px;
-    padding: 2rem 9% 2rem;
+    font-size: 25px;
+    /* padding: 2rem 0% 0rem; */
     text-align: center;
 }
-    
+/* ----------------Programming Experience ---------- */
+.experience-text{
+    background-color: #f3f3d7;
+}
+.experience-text h1{
+font-size: 45px;
+text-align: center;
+margin-top: 2%;
+margin-bottom: 4%;
+}
+.experience-text h3{
+    font-size: 30px;
+    margin-bottom: 2%;
+}
+.bullet-list li{
+    margin-bottom: 2%;
+    font-size: 25px;
+    display: list-item;
+}
+.experience-text p{
+    margin-bottom: 2%;
+    font-size: 25px;
+}
+.cas-image{
+    overflow: hidden;
+    border-radius: 10%;
+    max-width: 35%;
+}
+.app-download {
+    display: block;
+    padding: 1rem 2.8rem;
+    background: #afb074;
+    border-radius: 3rem;
+    /* box-shadow: 0 0 25px #cdcd89; */
+    font-size: 1rem;
+    color: #2b2b04;
+    letter-spacing: .1rem;
+    font-weight: 300;
+    margin-top: 60px;
+    text-decoration: none;
+    text-align: center;
+    width: 220px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 8%;
+    font-weight: 900px;
+}
+
+.app-download:hover {
+    box-shadow: none;
+}
+/* ---------------First Feedback---------- */
+
+/* ---------------ICT Field----------   */
+  
 /* -------------Dashboard---------- */
 table {
     width: 60%;
@@ -765,10 +837,23 @@ select {
 }
 
 /* ------------- Footer -------------- */
+.footer-profile {
+    text-align: center;
+    /* padding: 0; */
+    margin-top: 150px;
+    margin-bottom: -80%;
+}
 footer {
     text-align: center;
     padding: 0;
     margin-top: 0px;
     background-color: #b1b273;
 
+}
+.footer-blog{
+    text-align: center;
+    padding: 0;
+    margin-top: 0px;
+    background-color: #f2f2d7;
+   
 }
