--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
     color: #000000;
+    font-family: 'times new roman', sans-serif;
 }
 
 section {
@@ -29,7 +30,7 @@ section {
     float: left;
     letter-spacing: 0.5px;
     cursor: pointer;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'times new roman', sans-serif;
     font-weight: bold;
 }
 
@@ -38,6 +39,10 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+#name h1{
+    font-family: 'Playball', sans-serif;
+    font-size: 30px;
 }
 
 .header-profile-image {
@@ -110,7 +115,6 @@ nav {
     padding: 0px 100px;
     position: fixed;
     background-image: linear-gradient(#F1F1C0, #b1b273);
-    /* background-color: #F1F1C0; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -155,6 +159,7 @@ nav ul li a {
     color: black;
     text-decoration: none;
     font-size: 18px;
+    /* font-family: 'Playball', sans-serif; */
 }
 
 nav ul li a::after {
@@ -188,7 +193,8 @@ nav ul li a:hover::after {
     font-size: 60px;
     margin-top: 20px;
 }
-nav a.active{
+
+nav a.active {
     color: #676742;
     background-image: linear-gradient(#F1F1C0, #b1b273);
 }
@@ -390,15 +396,15 @@ nav a.active{
 }
 
 /* ------------Blog------------- */
-.blog-background{
+.blog-background {
     background-color: #f2f2d7;
 }
+
 .blog-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1200px;
-    /* margin-block: 2rem; */
     gap: 2rem;
     margin-left: 8%;
 }
@@ -420,7 +426,7 @@ img {
     object-fit: cover;
 }
 
-.blog-img-2{
+.blog-img-2 {
     max-width: 6%;
     transform: rotate(180deg);
     margin-left: 75%;
@@ -428,7 +434,7 @@ img {
     margin-top: -2%;
 }
 
-.card {
+.blog-card {
     display: flex;
     flex-direction: column;
     width: clamp(20rem, calc(20rem + 2vw), 22rem);
@@ -492,149 +498,160 @@ img {
     margin-top: auto;
 }
 
-.studychoice-header{
-    /* background: #F1F1C0; */ 
+.studychoice-header {
     text-align: center;
     font-weight: 550;
     font-size: 200%;
     color: #262626;
     text-shadow: 5px 5px 5px #999a64;
     margin-top: 10%;
-    /* margin-bottom: -80%; */
 }
 
 /* ---------------Study Choice----------- */
-.study-background{
+.study-background {
     background-color: #F1F1C0;
 }
-.studychoice h1{
+
+.studychoice h1 {
     background: #F1F1C0;
-    float: left; 
+    float: left;
     font-weight: 550;
     font-size: 400%;
     color: #000000;
     text-shadow: 5px 5px 5px #999a64;
 }
-.studychoice-text-pt1{
+
+.studychoice-text-pt1 {
     float: left;
     box-shadow: 2px 2px 10px 10px #F1F1C0;
     border-radius: 5%;
     background-color: #F1F1C0;
 }
-.studychoice-text-pt1 img{
+
+.studychoice-text-pt1 img {
     float: right;
     margin-left: 8%;
     margin-bottom: 0%;
     border-radius: 10%;
 }
-.studychoice p{
+
+.studychoice p {
     font-size: 25px;
 }
-.studychoice h2{
+
+.studychoice h2 {
     font-size: 35px;
     margin-bottom: 1%;
     margin-top: 2%;
-    
+
 }
-.fixed-text{
+
+.fixed-text {
     margin-top: 15%;
     font-size: 30px;
 }
-.studychoice-text-pt2{
+
+.studychoice-text-pt2 {
     box-shadow: 2px 2px 10px 10px #F1F1C0;
     border-radius: 5%;
     background-color: #F1F1C0;
-    
+
 }
 
 /* ------------SWOT-Analysis------------ */
-.swot-background{
-    /* background-image: linear-gradient(to bottom, rgb(177, 178, 115), rgb(241, 241, 192), rgb(250, 250, 250)); */
+.swot-background {
     background-color: #f3f3d7;
 }
 
-.swotanalysis{
+.swotanalysis {
     display: flex;
     font-size: 25px;
     padding: 3rem 9% 2rem;
     text-align: center;
-    
+
     margin-left: -13%;
 }
-.swot-h1{
+
+.swot-h1 {
     text-align: center;
     color: #000000;
     margin-top: -10%;
     font-size: 45px;
     text-shadow: 5px 5px 5px #999a64;
 }
-.swot-img{
+
+.swot-img {
     margin-left: 25%;
     margin-top: 5%;
     max-width: 50%;
     border-radius: 10%;
-    /* border-style: solid; */
     overflow: hidden;
 }
-.strengths{
+
+.strengths {
     float: left;
-    /* box-shadow: 2px 2px 10px 10px #b1b273; */
     max-width: 50%;
 }
-.weaknesses{
+
+.weaknesses {
     float: right;
-    /* box-shadow: 2px 2px 10px 10px #b1b273; */
     margin-left: 17%;
 }
-.opportunities{
+
+.opportunities {
     float: left;
-    /* box-shadow: 2px 2px 10px 10px #b1b273; */
     margin-left: 10%;
 }
-.threats{
+
+.threats {
     float: right;
-    /* box-shadow: 2px 2px 10px 10px #b1b273; */
 }
-.swotanalysis-2{
+
+.swotanalysis-2 {
     display: flex;
     font-size: 25px;
-    /* padding: 2rem 0% 0rem; */
     text-align: center;
 }
+
 /* ----------------Programming Experience ---------- */
-.experience-text{
+.experience-text {
     background-color: #f3f3d7;
 }
-.experience-text h1{
-font-size: 45px;
-text-align: center;
-margin-top: 2%;
-margin-bottom: 4%;
+
+.experience-text h1 {
+    font-size: 45px;
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 4%;
 }
-.experience-text h3{
+
+.experience-text h3 {
     font-size: 30px;
     margin-bottom: 2%;
 }
-.bullet-list li{
+
+.bullet-list li {
     margin-bottom: 2%;
     font-size: 25px;
     display: list-item;
 }
-.experience-text p{
+
+.experience-text p {
     margin-bottom: 2%;
     font-size: 25px;
 }
-.cas-image{
+
+.cas-image {
     overflow: hidden;
     border-radius: 10%;
     max-width: 35%;
 }
+
 .app-download {
     display: block;
     padding: 1rem 2.8rem;
     background: #afb074;
     border-radius: 3rem;
-    /* box-shadow: 0 0 25px #cdcd89; */
     font-size: 1rem;
     color: #2b2b04;
     letter-spacing: .1rem;
@@ -652,10 +669,370 @@ margin-bottom: 4%;
 .app-download:hover {
     box-shadow: none;
 }
+
 /* ---------------First Feedback---------- */
+.first-feedback{
+    background: linear-gradient(to right,#cdcf98, #f3f3d7);
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    z-index: -10;
+    background-color: var(#BF307F);
+  }
+  
+  .feedback-container {
+    display: flex;
+    height: 100vh;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    animation: expand .8s ease forwards;
+    background-color: var(#151226);
+    position: relative;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: all .8s ease;
+  }
+  
+  .container_content {
+   width: 50%;
+  }
+  
+  .container_content_inner {
+    width: 80%;
+    margin-left: 80px;
+  }
+  
+  .container_outer_img {
+    margin: 50px;
+    width: 50%;
+    overflow: hidden;
+  }   
+      
+  .container_img {
+    max-width: 90%;
+    animation: slideIn 1.5s ease-in-out forwards;
+    margin-top: 40%;
+    border-radius: 2%;
+    margin-bottom: 20%;
+  }
+  
+  .par {
+    height: auto;
+    overflow: hidden;
+    font-size: 20px;
+    color: black;
+  }
+  
+  .par p{
+    line-height: 28px;
+    transform: translateY(300px);
+    animation: slideUp .8s ease-in-out forwards .8s;
+  }
+  
+  .btns {
+    height: 100%;
+    position: relative;
+    width: 150px;
+    overflow: hidden;
+  }
+  
+  .btns_more {
+    background: transparent;
+    border: 1px solid var(#BF307F);
+    border-radius: 50px;
+    padding: 8px 12px;
+    color: #BF307F;
+    font-size: 16px;
+    text-transform: uppercase;
+    position: relative;
+    margin-top: 15px;
+    outline: none;
+    transform: translateY(50px);
+    animation: slideUp .8s ease-in-out  forwards 1s;
+  }
+  
+  .feedback-title2 {
+    overflow: hidden;
+    height: auto;
+    margin-top: 40%;
+  }
+  
+  .feedback-title2 h1 {
+      font-size: 40px;
+      color: var(#BF307F);
+      margin-bottom: 20px;
+      transform: translateY(100px);
+      animation: slideUp .8s ease forwards .5s;
+  }
+  
+  @keyframes slideIn {
+    0% {
+      transform: translateX(500px) scale(.2);
+    }
+    100% {
+      transform: translateX(0px) scale(1);
+    }
+  }
+  
+  @keyframes slideUp {
+    0% {
+      transform: translateY(300px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+  
+  @keyframes expand {
+    0% {
+      transform: translateX(1400px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
+
+.feedback-title{
+    text-align: center;
+    color: #676742;
+    margin-top: 10%;
+    font-size: 45px;
+    text-shadow: 5px 5px 5px #999a64;
+    border-bottom: 2px solid #000;; /* Adjust the color and thickness as needed */
+  display: inline-block; /* This makes the line only as wide as the text */
+  padding-bottom: 5px;
+  margin-left: 20%;
+  width: 60%;
+}
+#form-section{
+    background: #DAF2F8;
+    background: -webkit-linear-gradient(to right, #f3f3d7, #cdcf98);
+    background: linear-gradient(to right,#cdcf98, #f3f3d7);
+    /* width: 300%;
+    height: 300%; */
+    background-color: #F1F1C0;
+    margin-left: 5%;
+}
+.h1-tag{
+    text-align: center;
+    margin-top: 4%;
+    font-size: 50px;
+    color: #676742;
+}
+.form-content{
+    width: 400px;
+    height: 30%;
+    margin-top: 3%;
+    margin-left: 25%;
+    font-size: 20px;
+    color: #676742;
+    
+}
+
+@media screen and (max-width: 600px) {
+    .form-content{
+        width: 100%;
+        margin-top: 10%;
+        margin-left: 0;
+    }
+}
+.form-group{
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 70%;
+    
+    /* background-color: #F1F1C0; */
+}
+@media screen and (max-width:800px){
+    .form-group{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .btn-primary{
+        margin-left: 20px;
+    }
+}
+.myclass{
+    border-radius: 20px;
+}
+.form-control{
+    font-size: 30%;
+    height: 50%;
+    padding: 10px;
+    width: 100%;
+    background-color: #eeeed6;
+    overflow: hidden;
+    border-radius: 2%;
+}
+/* ::placeholder{
+    padding: 90px 20px 80px 0px;
+    font-size: 30px;
+} */
+.feedback-btn{
+margin-left: 20%;
+display: block;
+    padding: 1rem 2.8rem;
+    background: #F1F1C0;
+    border-radius: 3rem;
+    box-shadow: 0 0 25px #F1F1C0;
+    font-size: 1rem;
+    color: #2b2b04;
+    letter-spacing: .1rem;
+    font-weight: 300;
+    margin-top: 60px;
+    text-decoration: none;
+    text-align: center;
+    width: 220px;
+}
+
+
 
 /* ---------------ICT Field----------   */
-  
+.ict{
+    background-color: #f3f3d7;
+}
+.ict-title{
+    text-align: center;
+    color: #000000;
+    margin-top: 10%;
+    font-size: 45px;
+    text-shadow: 5px 5px 5px #999a64;
+}
+.ict-container {
+    position: absolute;
+    width: 600px;
+    top: 60px;
+    left: calc(50% - 300px);
+    display: flex;
+    margin-top: 15%;
+}
+
+.card {
+    display: flex;
+    height: 380px;
+    width: 300px;
+    background-color: #f4f4ee;
+    border-radius: 10px;
+    box-shadow: -1rem 0 3rem #b1b273;
+    transition: 0.4s ease-out;
+    position: relative;
+    left: 0px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    flex-direction: column;
+    width: clamp(20rem, calc(20rem + 2vw), 22rem);
+}
+
+.card:not(:first-child) {
+    margin-left: -50px;
+}
+
+.card:hover {
+    transform: translateY(-20px);
+    transition: 0.4s ease-out;
+}
+
+.card:hover~.card {
+    position: relative;
+    left: 50px;
+    transition: 0.4s ease-out;
+}
+
+.title {
+    color: black;
+    font-weight: 600;
+    position: absolute;
+    left: 85px;
+    top: 15px;
+}
+
+.stroke {
+    stroke: white;
+    stroke-dasharray: 360;
+    stroke-dashoffset: 360;
+    transition: 0.6s ease-out;
+}
+
+svg {
+    fill: #17141d;
+    stroke-width: 2px;
+}
+
+.card:hover .stroke {
+    stroke-dashoffset: 100;
+    transition: 0.6s ease-out;
+}
+
+.ict-container img {
+    margin-top: 30%;
+    max-width: 10%;
+}
+
+.card1 {
+    background-image: url('/Images/ibm.png');
+    background-size: 120%;
+    background-attachment: initial;
+}
+
+.card2 {
+    background-image: url('/Images/Salesforce.com_logo.svg.png');
+    background-size: 100%;
+    background-attachment: initial;
+}
+
+.card3 {
+    background-image: url('/Images/Apple2.png');
+    background-size: 130%;
+    background-attachment: initial;
+}
+.card h5{
+    margin-left: 6%;
+    margin-top: 130%;
+    margin-bottom: -70%;
+    font-size: 20px;
+    
+}
+.card p{
+    margin-top: 130%;
+    margin-left: -170%;
+    margin-right: -220%;
+    font-size: 23px;
+}
+.card .info {
+    display: none;
+    padding: 10px;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 0 0 10px 10px;
+}
+.info-data.hidden {
+    display: none;
+    margin-top: -60%;
+    border: 2px solid #000; 
+    border-radius: 10px; 
+}
+.info-data2.hidden {
+    display: none;
+    margin-top: -60%;
+    border: 2px solid #000; 
+    border-radius: 10px; 
+}
+.subheading {
+    font-size: 1.5em; 
+    font-weight: bold; 
+}
+/* .footer-ict{
+    text-align: center;
+    margin-top: 38.5%;
+} */
+
 /* -------------Dashboard---------- */
 table {
     width: 60%;
@@ -843,6 +1220,7 @@ select {
     margin-top: 150px;
     margin-bottom: -80%;
 }
+
 footer {
     text-align: center;
     padding: 0;
@@ -850,10 +1228,11 @@ footer {
     background-color: #b1b273;
 
 }
-.footer-blog{
+
+.footer-blog {
     text-align: center;
     padding: 0;
     margin-top: 0px;
     background-color: #f2f2d7;
-   
+
 }
