--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ section {
 
 #header {
     width: 100%;
-    height: 100vh;
     background-color: #b1b273;
     background-size: cover;
     background-position: center;
@@ -205,7 +204,7 @@ nav a.active {
     height: 805px;
     padding: 70px 0px;
     margin-bottom: 0%;
-    background-color: #b1b273;
+    background-color: #f2f2d7;
 }
 
 .row {
@@ -619,10 +618,15 @@ img {
 }
 
 .experience-text h1 {
-    font-size: 45px;
+    font-size: 50px;
     text-align: center;
-    margin-top: 2%;
+    margin-top: 0%;
     margin-bottom: 4%;
+    text-align: center;
+    color: #000000;
+    margin-top: 10%;
+    font-size: 45px;
+    text-shadow: 5px 5px 5px #999a64;
 }
 
 .experience-text h3 {
@@ -1034,6 +1038,9 @@ svg {
 } */
 
 /* -------------Dashboard---------- */
+.dashboard-body{
+    background-color: #f2f2d7;
+}
 table {
     width: 60%;
     border-collapse: collapse;
@@ -1127,6 +1134,9 @@ select {
 }
 
 /* --------------FAQ------------- */
+.faq-body{
+   background-color: #f2f2d7;
+}
 .questions-image {
     float: left;
     margin-left: 10%;
@@ -1184,7 +1194,7 @@ select {
     margin: 0;
     padding: 3px 0 0 0;
     font-weight: normal;
-    color: #b1b273;
+    color: #838355;
     transition: all .5s ease-in;
 }
 
@@ -1199,7 +1209,7 @@ select {
 }
 
 .active h5 {
-    color: #414f2c;
+    color: #354023;
 }
 
 .panel {
